applauncherd (2.0.6) unstable; urgency=low

  * Changes: test fixed test_launched_app_wm_class_m

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balakrishnan@nokia.com>  Fri, 14 Oct 2011 14:40:32 +0300

applauncherd (2.0.5) stable; urgency=low

  * Changes: Implementation of re-exec functionality, trigger is disabled
  * Fixes: NB#269265 - COREWEB: __assert_fail append_pending_request _XReply
  * Changes: added CPU usage logging to performance tests

 -- Marek Ruszczak <ext-Marek.Ruszczak@nokia.com>  Fri, 14 Oct 2011 12:44:44 +0300

applauncherd (2.0.4) stable; urgency=low

  * Fixes: NB#284949 - m & d app boosters are leaking FDs 
  * Changes: Insignificant returned false in qml perf tests

 -- Olli Leppanen <olli.leppanen@nokia.com>  Mon, 3 Oct 2011 11:18:27 +0300

applauncherd (2.0.3) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Tue, 27 Sep 2011 15:48:27 +0300

applauncherd (2.0.2) stable; urgency=low

  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Mon, 26 Sep 2011 13:59:20 +0300

applauncherd (2.0.1) stable; urgency=low

  * Changes: Fix performance tests
  * Changes: Fix dependency for testscripts
  * Changes: Add tests for detecting unexpected GL context in boosters

 -- Marek Ruszczak <ext-marek.ruszczak@nokia.com>  Thu, 26 Sep 2011 13:30:00 +0300

applauncherd (2.0.0) stable; urgency=low

  * Fixes: NB#274302 - don't unload the main binary
  * Fixes: NB#275522 - Booster::requestSplash() segfault
  * Fixes: NB#274400 - [TASK] Remove legacy code from applauncherd
  * Changes: Add unit test for Logger - open log twice
  * Changes: Add functional test - invoker kills application when applauncherd dies

 -- Alexey Shilov <alexey.shilov@nokia.com>  Thu, 18 Aug 2011 15:43:02 +0300

applauncherd (1.1.1) stable; urgency=low
