@@ -1,6 +1,7 @@
 applauncherd (2.0.6) unstable; urgency=low
 
   * Changes: test fixed test_launched_app_wm_class_m
+  * Changes: updated invalid test cases in func-tests and removed 1 invalid test case in daemon-tests
 
  -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balakrishnan@nokia.com>  Fri, 14 Oct 2011 14:40:32 +0300
 
